<resources>
    <string name="app_name">Quality Check</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="username">Username</string>
    <string name="permission_camera_rationale">Not activated</string>
    <string name="ok">ok</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Tailor</string>
    <string name="slide_1_desc"></string>
    <string name="slide_2_title">Permissons</string>
    <string name="slide_2_desc"></string>
    <string name="action_settings">Settings</string>
    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="qr">LOG IN WITH QR CODE</string>
    <string name="or">OR</string>
    <string name="changepassword">Change Password</string>
    <string name="changepassword1">Please enter your password which has sent through mail</string>
    <string name="welcome">Welcome</string>
    <string name="usi">Upload  Store Image</string>
    <string name="usii">Upload  Signature Image</string>
    <string name="upi">Upload  Profile Image</string>
    <string name="storename">Store Name</string>
    <string name="storeemail">Store Email</string>
    <string name="storeaddress">Store Address</string>
    <string name="facmail">Factory Email</string>
    <string name="storephone">Store Mobile</string>
    <string name="tripadvisor">Tripadvisor Link</string>
    <string name="adminname">Admin Name</string>
    <string name="adminemail">Admin Email</string>
    <string name="signup">SIGN UP</string>
    <string name="ufii">Upload  Fabric Image</string>
    <string name="fid">Fabric Id</string>
    <string name="fno">Fabric Number</string>
    <string name="fprice">Fabric Price</string>
    <string name="fabout">About Fabric</string>
    <string name="ftotal">Total Fabric in Meters</string>
    <string name="fadd">Add FABRIC</string>
    <string name="fedit">Edit Fabric</string>
    <string name="fupdate">Update Fabric Details</string>
    <string name="existing">Existing Store</string>
    <string name="newstore">New Store</string>
    <string name="myorders">My Orders</string>
    <string name="neworder">New Order</string>
    <string name="delivery">Deliveries</string>
    <string name="updatedelivery">Update Delivery</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="upgrade">Upgrade</string>
    <string name="logout">Logout</string>
    <string name="onum">Order Number</string>
    <string name="cnumber">Customer Number</string>
    <string name="cname">Customer Name</string>
    <string name="gender">GENDER</string>
    <string name="address">Address</string>
    <string name="example">Example: 00917683995124</string>
    <string name="add">Add 00,country code to your number</string>
    <string name="dstatus">Delivery Status</string>
    <string name="dnumber">Delivery Number</string>
    <string name="ddate">Delivery Date</string>
    <string name="dtime">Delivery Time</string>
    <string name="advance">Advance Paid</string>
    <string name="left">Left Balance</string>
    <string name="fmeters">Fabric Meters</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="itc">Item Price Costing</string>
    <string name="ffb">First Fabric Price</string>
    <string name="sfb">Second Fabric Price</string>
    <string name="tfb">Third Fabric Price</string>
    <string name="fofb">Fourth Fabric Price</string>
    <string name="fifb">Fifth Fabric Price</string>
    <string name="effb">Extra First Fabric Price</string>
    <string name="esfb">Extra Second Fabric Price</string>
    <string name="etfb">Extra Third Fabric Price</string>
    <string name="efofb">Extra Fourth Fabric Price</string>
    <string name="efifb">Extra Fifth Fabric Price</string>
    <string name="price">Price</string>
    <string name="qty">Quantity</string>
    <string name="mp">Making price</string>
    <string name="tp">Total Price</string>
    <string name="finishorder">FINISH ORDER</string>
    <string name="cartempty">Your Cart is Empty</string>
    <string name="sketch">Sketch</string>
    <string name="extrainfo">Any Extra Information</string>
    <string name="fb">Final Billing</string>
    <string name="rt">Remaining</string>
    <string name="choosestyle">Choose Style</string>
    <string name="choosegender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="un">Type Your Mobile(Universal) Number</string>
    <string name="en">Type Your Existing Number</string>
    <string name="ud">User Details</string>
    <string name="pi">Purchased Items</string>
    <string name="me">Measurements</string>
    <string name="sef">Scan extra fabric</string>
    <string name="ns">Name of Style</string>
    <string name="damount">Due Amount</string>

    ///Extra
    <string name="na">Not Available</string>
    <string name="limit">You reached your limit</string>
    <string name="limit1">You cant add orders more than</string>
    <string name="limit2">in a month ! Please Upgrade</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="No">No</string>
    <string name="Obpoo">Obpoo market</string>
    <string name="Obpoo1">Do you want to join obpoo market?</string>
    <string name="Obpoo2">Obpoo market</string>
    <string name="Obpoo3">You already joined Obpoo market</string>
    <string name="Obpoo4">Do you want to edit your details?</string>
    <string name="Internet">Good! Connected to Internet</string>
    <string name="Internet1">Sorry! Not connected to internet</string>
    <string name="Logout">Are you sure you want to logout?</string>
    <string name="Fields">Please fill the fields</string>
    <string name="emailsent">Email sent</string>
    <string name="emailsent1">Password not match</string>
    <string name="salesman">Logged in as Salesman</string>
    <string name="salesman1">Logged in as Admin</string>
    <string name="mismatch">Username and password mismatch</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="delete">Delete</string>
    <string name="joinmarket">Join Market</string>
    <string name="Website">Website</string>
    <string name="mobilecart">Mobile Cart</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="restore">Restore</string>
    <string name="verify">Verify</string>
    <string name="tp1">Dont Have TripAdvisor Account? Create one!</string>
    <string name="tp2">Copy Your Business Link and Paste it</string>
    <string name="filter1">Type filter name</string>
    <string name="addsales">Add sales guy</string>
    <string name="usiis">Upload Profile Image</string>
    <string name="eraser">Eraser</string>
    <string name="save">Save</string>
    <string name="extra">Extra Item Price</string>
    //Dress
    <string name="dress1">Dress Name</string>
    <string name="dress2">Dress Price</string>
    <string name="dress3">Dress Code</string>
    <string name="dress4">S Quantity</string>
    <string name="dress5">Dress Details</string>
    <string name="dress6">M Quantity</string>
    <string name="dress7">L Quantity</string>
    <string name="dress8">XL Quantity</string>
    <string name="dress9">XXL Quantity</string>
    <string name="dress10">Customize Quantity</string>
    <string name="ephotos">"Edit Photos</string>
    <string name="both">Both</string>
    <string name="scan">Scan</string>
    <string name="ui1">"Upload Image 1</string>
    <string name="ui2">"Upload Image 2</string>
    <string name="ui3">"Upload Image 3</string>
    //fabric filters
    <string name="fabric1">Fabric Line </string>
    <string name="fabric2">Fabric Color </string>
    <string name="fabric3">Fabric Weaves </string>
    <string name="fabric4">Fabric Pattern </string>
    <string name="fabric5">Fabric Composition </string>
    <string name="fabric6">Fabric Mill </string>
    <string name="fabric7">Fabric Weight </string>
    <string name="fabric8">Fabric Super </string>
    <string name="item">Item</string>
    //measurments
    <string name="existingnumber">Existing order number</string>
    <string name="neck">Neck</string>
    <string name="fullchest">Full Chest</string>
    <string name="me3">Full Shoulder Width</string>
    <string name="me4">Right Sleeve</string>
    <string name="me5">Left Sleeve</string>
    <string name="me6">Bicep</string>
    <string name="me7">Wrist</string>
    <string name="me8">Waist</string>
    <string name="me9">Hips</string>
    <string name="me10">Front Jacket Length</string>
    <string name="me11">Full Shoulder Width</string>
    <string name="me12">Front chest width</string>
    <string name="me13">Back Width</string>
    <string name="me14">Half Shoulder width right</string>
    <string name="me15">Half Shoulder width left</string>
    <string name="me16">Full Back length</string>
    <string name="me17">Half Back Length</string>
    <string name="me18">Trouser Waist</string>
    <string name="me19">Trouser Outseam</string>
    <string name="me20">Trouser Inseam</string>
    <string name="me21">Crotch</string>
    <string name="me22">Thigh</string>
    <string name="me23">Knee</string>
    <string name="me24">Right Full Sleeve</string>
    <string name="me25">Left Full Sleeve</string>
    <string name="me26">Extra</string>
    //obpoo
    <string name="o1">Whats your Store about ?</string>
    <string name="o2">Customization</string>
    <string name="full">Full</string>
    <string name="semi">Semi</string>
    <string name="ready">Ready</string>
    <string name="o3">ID PROOF1</string>
    <string name="o4">ID PROOF2</string>
    <string name="o5">Bank Details</string>
    <string name="submit">Submit</string>
    <string name="o6">DISABLE</string>
    <string name="o7">ENABLE</string>
    <string name="o8">Choose</string>
    <string name="o9">Upload</string>
    <string name="o10">Add to Cart</string>
    <string name="o11">Meters</string>
    <string name="o12">Book</string>
    <string name="o13">Support</string>
    <string name="o14">Subject</string>
    <string name="o15">Content</string>
    <string name="o16">Subject</string>
    <string name="o18">Call</string>
    <string name="o17">SEND EMAIL</string>
    <string name="o19">Update Delivery</string>
    <string name="o20">Delivery Number</string>
    <string name="o21">Due Amount</string>
    <string name="o22">Total Amount</string>
    <string name="o23">Purchased Items</string>
    <string name="o24">Delivery Status</string>
    <string name="o25">Update Delivery</string>
    <string name="o26">Currency</string>


</resources>
