<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/activity_stores"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                android:padding="10dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appnamess"
                android:text="Quality Check"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/QRCodeWhiteColor"
                android:textSize="35dp"
                />

            <EditText
                android:id="@+id/lusername"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:background="@drawable/invisibleborder"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColor="@color/QRCodeWhiteColor"
                android:textColorHint="@color/QRCodeWhiteColor" />

            <RelativeLayout
                android:layout_width="270dp"
                android:background="@drawable/invisibleborder"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/QRCodeWhiteColor"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:hint="@string/password"
                    android:id="@+id/lpassword"
                    android:textColorHint="@color/QRCodeWhiteColor" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:id="@+id/lshowpassword"

                    android:background="@drawable/ic_visibility_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="11dp"
                    android:layout_marginEnd="11dp" />
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:id="@+id/lshownpassword"

                    android:background="@drawable/ic_visibility_off_white_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="11dp"
                    android:layout_marginEnd="11dp"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/lforgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/forgot"
                android:textColor="@color/QRCodeWhiteColor"
                android:textStyle="normal|italic" />



            <Button
                android:id="@+id/lsigninn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/QRCodeWhiteColor"
                android:text="@string/signin"
                android:textColor="@color/QRCodeBlackColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lsigninn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/or"
                android:textColor="@color/QRCodeWhiteColor"
                android:textStyle="normal|italic" />

            <Button
                android:id="@+id/lqrcode"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lsigninn"
                android:layout_marginTop="10dp"
                android:background="@color/QRCodeWhiteColor"
                android:layout_marginBottom="150dp"
                android:text="@string/qr"
                android:textColor="@color/QRCodeBlackColor"
                android:textStyle="bold" />




        </LinearLayout>


    </ScrollView>

</RelativeLayout>
